Learnbit offline model version complete

--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,19 @@
 <body>
   <h1>LearnBit</h1>
   
-  <!-- Section for pasting code, like the input in Task Lister -->
-  <h2>Paste Your Code</h2>
+  <!-- Section for pasting or speaking code -->
+  <h2>Paste or Speak Your Code</h2>
   <textarea id="code" placeholder="e.g., for(let i=0; i<5; i++)"></textarea>
-  <br> <!-- Line break to add space -->
-  <!-- Button to check code, like clicking "add task" -->
+  <br> <!-- Line break for space -->
+  <!-- Buttons to check code or speak -->
   <button onclick="checkCode()">Check Code</button>
-  <!-- Div to show feedback, like output in my labs -->
+  <button onclick="listenToUser()">Speak Code</button>
+  <!-- Div to show feedback -->
   <div id="feedback"></div>
   
-  <!-- Section for progress, like my Task Lister list -->
+  <!-- Section for progress -->
   <h2>My Progress</h2>
   <ul id="progress"></ul>
-
+  
 </body>
 </html>
