--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,31 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <h1>LearnBit</h1>
-  
-  <!-- Section for pasting or speaking code -->
-  <h2>Paste or Speak Your Code</h2>
-  <textarea id="code" placeholder="e.g., for(let i=0; i<5; i++)"></textarea>
-  <br> <!-- Line break for space -->
-  <!-- Buttons to check code or speak -->
-  <button onclick="checkCode()">Check Code</button>
-  <button onclick="listenToUser()">Speak Code</button>
-  <!-- Div to show feedback -->
-  <div id="feedback"></div>
-  
-  <!-- Section for progress -->
-  <h2>My Progress</h2>
-  <ul id="progress"></ul>
-  
+  <header>
+    <h1>LearnBit</h1>
+    <p class="tagline">Your coding Tutor</p>
+  </header>
+
+  <main>
+    <!-- Section for pasting or speaking code -->
+    <section id="codeSection">
+      <h2>Paste or Speak Your Code</h2>
+      <textarea id="code" placeholder="e.g., for(let i=0; i<5; i++)"></textarea>
+      <br>
+      <button id="checkBtn">Check Code</button>
+      <button id="speakBtn">Speak Code</button>
+      <div id="feedback" class="feedback-box"></div>
+    </section>
+
+    <!-- Section for progress -->
+    <section id="progressSection">
+      <h2>My Progress</h2>
+      <ul id="progress"></ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 LearnBit</p>
+  </footer>
 </body>
 </html>
