--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <title>LearnBit</title>
-  
+
+  <!--
+    LearnBit - Single File Version (for GitHub Pages)
+    -------------------------------------------------
+    This HTML file includes:
+      • HTML structure
+      • CSS styling (inline <style>)
+      • JavaScript (inline <script>)
+    It fetches a fake JSON file (feedback.json) instead of using Node/Express.
+
+    How it works on GitHub Pages:
+      1. User types code into the textarea.
+      2. When "Check Code" is clicked, we fetch feedback.json.
+      3. The feedback is displayed and spoken out loud using the browser's speech system.
+      4. Each check is recorded in the "My Progress" list.
+
+    Files you need in your repo:
+      • index.html   (this file)
+      • feedback.json (the fake feedback file)
+  -->
+
   <!-- Inlined CSS -->
   <style>
     /* Page setup */
     body {
-      font-family: Arial, sans-serif;
-      background: #f0f0f0;
-      max-width: 900px;
-      margin: 20px auto;
+      font-family: Arial, sans-serif; /* clean, easy-to-read font */
+      background: #f0f0f0;           /* soft gray background */
+      max-width: 900px;              /* keep content narrow for readability */
+      margin: 20px auto;             /* center everything */
       padding: 20px;
       line-height: 1.5;
-      text-align: center;
+      text-align: center;            /* center text for simplicity */
     }
 
+    /* Header and footer */
     header, footer {
       margin-bottom: 20px;
     }
@@ -32,33 +53,36 @@
       color: #777;
     }
 
+    /* Code input box */
     textarea {
-      width: 90%;
-      max-width: 600px;
+      width: 90%;             /* wide but responsive */
+      max-width: 600px;       /* don’t let it stretch too much */
       height: 120px;
-      font-family: monospace;
+      font-family: monospace; /* code-like font */
       font-size: 14px;
       padding: 8px;
       margin: 10px 0;
       border: 1px solid #ccc;
       border-radius: 4px;
-      resize: vertical;
+      resize: vertical;       /* let user stretch vertically */
     }
 
+    /* Buttons */
     button {
       padding: 10px 20px;
       margin: 6px;
       border: none;
       border-radius: 4px;
-      background: #4a90e2;
+      background: #4a90e2;   /* calm blue */
       color: white;
       font-size: 14px;
       cursor: pointer;
     }
     button:hover {
-      background: #357abd;
+      background: #357abd;   /* slightly darker on hover */
     }
 
+    /* Feedback area */
     .feedback-box {
       margin: 20px auto;
       padding: 12px;
@@ -67,12 +91,13 @@
       border: 1px solid #ddd;
       border-radius: 4px;
       font-size: 15px;
-      text-align: left;
+      text-align: left;       /* make explanations look like text blocks */
       min-height: 40px;
     }
 
+    /* Progress section */
     #progress {
-      list-style: none;
+      list-style: none;   /* remove bullets */
       padding: 0;
     }
     #progress li {
@@ -117,53 +142,71 @@
 
   <!-- Inlined JavaScript -->
   <script>
+    // ----------------------------
+    // Function: checkCode()
+    // Called when user clicks the "Check Code" button
+    // ----------------------------
     async function checkCode() {
+      // 1. Get the text area (where user types code)
       const codeBox = document.getElementById("code");
+
+      // 2. Get the feedback <div> (where feedback is shown)
       const feedbackBox = document.getElementById("feedback");
+
+      // 3. Get the progress <ul> (list where we track progress)
       const progressList = document.getElementById("progress");
 
+      // 4. Take what user typed (and remove extra spaces)
       let userCode = codeBox.value.trim();
+
+      // If nothing was typed, warn the user and stop here
       if (userCode === "") {
         feedbackBox.textContent = "Please type some code first.";
         speakText("Please type some code first.");
         return;
       }
 
+      // Show waiting message while we check
       feedbackBox.textContent = "Checking your code...";
       speakText("Checking your code");
 
       try {
-        const response = await fetch("/check-code", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ code: userCode })
-        });
+        // 5. On GitHub Pages: fetch feedback from a static JSON file
+        const response = await fetch("feedback.json");
 
+        // 6. If we can’t load the file
         if (!response.ok) {
-          let errorMsg = "Server problem: " + response.status;
-          feedbackBox.textContent = errorMsg;
-          speakText(errorMsg);
-          return;
+          throw new Error("Could not load feedback.json");
         }
 
+        // 7. Read the JSON file
         const data = await response.json();
-        let feedback = data.feedback || "No feedback from mentor.";
+
+        // 8. Show the feedback (or a default message if empty)
+        let feedback = data.feedback || "No feedback available.";
         feedbackBox.textContent = feedback;
+
+        // 9. Speak the feedback out loud
         speakText(feedback);
 
+        // 10. Add this action to the "My Progress" list
         let newItem = document.createElement("li");
         newItem.textContent =
           "You checked some code: " + userCode.slice(0, 30) + "...";
         progressList.appendChild(newItem);
 
       } catch (error) {
-        console.error("Error talking to server:", error);
-        let errMsg = "Could not reach server. Is it running?";
-        feedbackBox.textContent = errMsg;
-        speakText(errMsg);
+        // If something went wrong (JSON missing, etc.)
+        console.error(error);
+        feedbackBox.textContent = "⚠️ Could not load feedback.";
+        speakText("Could not load feedback");
       }
     }
 
+    // ----------------------------
+    // Function: listenToUser()
+    // Placeholder for the "Speak Code" button
+    // ----------------------------
     function listenToUser() {
       const feedbackBox = document.getElementById("feedback");
       let msg = "Voice input not ready yet. Coming soon!";
@@ -171,23 +214,41 @@
       speakText(msg);
     }
 
+    // ----------------------------
+    // Function: speakText()
+    // Uses the browser's speech system to read text out loud
+    // ----------------------------
     function speakText(text) {
       if ("speechSynthesis" in window) {
+        // Stop anything already speaking before starting new
         speechSynthesis.cancel();
+
+        // Create a voice message
         let utterance = new SpeechSynthesisUtterance(text);
-        utterance.lang = "en-US";
+        utterance.lang = "en-US"; // language
+
+        // Speak it
         speechSynthesis.speak(utterance);
       } else {
         console.log("This browser does not support speech synthesis.");
       }
     }
 
+    // ----------------------------
+    // Add event listeners when the page loads
+    // ----------------------------
     document.addEventListener("DOMContentLoaded", function () {
       let checkBtn = document.getElementById("checkBtn");
       let speakBtn = document.getElementById("speakBtn");
 
-      if (checkBtn) checkBtn.addEventListener("click", checkCode);
-      if (speakBtn) speakBtn.addEventListener("click", listenToUser);
+      // Link the buttons to their functions
+      if (checkBtn) {
+        checkBtn.addEventListener("click", checkCode);
+      }
+
+      if (speakBtn) {
+        speakBtn.addEventListener("click", listenToUser);
+      }
     });
   </script>
 </body>
